@@ -30,6 +30,7 @@
 * Orbital: Bug fixes; add CustomerEmail, Retry Logic, Managed Billing, and Destination Address [juicedM3
 * Distinguish invalid vs empty issue_numbers on CreditCards [drasch]
 * Float Gemfiles to latest Rails [sanemat]
+* USA ePay Advanced: Fix Check support [RyanScottLewis]
 
 == Version 1.32.1 (April 4, 2013)
 
